catchup web admin, incl. affiliations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ page-type: contact
 title: StoneAge Waterblast Tools - High pressure equipment for Hydroblasting | Industrial cleaning | Sewer jetting | Downhole cleaning
 excerpt: Manufacturer of high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
 permalink: /
+master-slider: yes
 ---
 
 <!-- Carousel -->
@@ -144,6 +145,16 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/lightweight-striker-available">Announcing Lightweight Striker</a></h4>
+        <p>StoneAge is pleased to announce the Lightweight Striker SKRL-100 automated remote shotgun cleaning system.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2017</small></p>
+      </li>
+      <li>
+        <h4><a href="http://news.stoneagetools.com/abx-3l-accessories">AutoBox ABX-3L Accessories</a></h4>
+        <p>Maximize your investment in StoneAge equipment with accessories that increase workplace safety, equipment capability, cleaning efficiency, and the life of your hoses and nozzles.<br>
+        <small><i class="fa fa-newspaper-o"></i> E-blast, May 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/stoneage-europe-open">StoneAge Europe Now Open for Business</a></h4>
         <p>We are pleased to announce that as of April 3, our StoneAge Europe facility in Malvern, United Kingdom, just outside of Birmingham, is ready to serve our waterblasting customers.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
@@ -152,21 +163,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/navigator-upgrade">New Navigator Upgrade Available</a></h4>
         <p>The Navigator is the only automated rotary hose device in the industry specifically engineered to clean small diameter process pipe with bends – <em>now redesigned around the proven ABX-PRO.</em><br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/announcing-new-spincat-sc-125">Announcing New SpinCat</a></h4>
-        <p>Introducing our newest addition to the SpinCat product line, the SC-125.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/welcome-stoneage-europe">StoneAge, Inc Announces Acquisition of AquaPower Ltd. In U.K.</a></h4>
-        <p>StoneAge announces that on February 21st 2017, it finalized the acquisition of AquaPower Ltd., a leading reseller of high pressure waterblasting tooling and accessories based in the United Kingdom. The acquisition expands capacity for StoneAge to provide world-class water blasting products and technical support to industrial cleaning contractors across the European Economic Area.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/west-coast-regional-sales-manager">StoneAge Welcomes New Sales Manager for the West Coast</a></h4>
-        <p>StoneAge is pleased to welcome David Moore as our Regional Sales Manager for the West Coast, based in Houston, Texas.<br>
-        <small><i class="fa fa-newspaper-o"></i> E-blast, March 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
@@ -197,58 +193,54 @@ permalink: /
   </div>
 </section>
 
-<!-- Testimonials -->
-<div id="wordCarousel" class="carousel slide padding-tb-30 " data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#wordCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#wordCarousel" data-slide-to="1"></li>
-    <li data-target="#wordCarousel" data-slide-to="2"></li>
-    <li data-target="#wordCarousel" data-slide-to="3"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <div class="testimonial">
-        <p>"We recognize StoneAge as a long term business partner. The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
-        <p class="attrib">- Andrew Dobson, Veolia</p>
-        <img src="assets/img/logo_veolia.png" alt="Veolia">
+<!-- Affiliations -->
+<div id="wordCarousel" class="padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
+  <div class="section-heading">
+      <h2>Affiliations</h2>
+  </div>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="http://www.hasc.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-hasc.png" alt="Houston Area Safety Council"></a>
       </div>
-    </div>
-    <div class="item">
-      <div class="testimonial">
-        <p>"The City of Los Angeles manages one of the largest wastewater collections systems in the country. They benchmarked the new Warthog Magnum against the competition and confirmed that it was the best cleaning tool available."</p>
-        <p class="attrib">- John Pujol, Advanced Infrastructure Technologies</p>
-        <img src="assets/img/logo_ait.png" alt="Advanced Infrastructure Technologies">
+      <div class="item">
+        <a href="http://www.waterjetting.org.uk/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-wja.png" alt="The Water Jetting Association"></a>
       </div>
-    </div>
-    <div class="item">
-      <div class="testimonial">
-        <p>"StoneAge helped us get our equipment fleet 100% automated."</p>
-        <p class="attrib">- Doug Mcgee, Evergreen Industrial Services</p>
-        <img src="assets/img/logo_evergreen.png" alt="Evergreen Industrial Services">
+      <div class="item">
+        <a href="https://www.wjta.org" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-wjta.png" alt="WJTA-IMCA"></a>
       </div>
-    </div>
-    <div class="item">
-      <div class="testimonial">
-        <p>"My customers are very happy. When we’re doing research and development along with StoneAge, they think it’s a big plus to have engineers that can get out in the field and work right along with us."</p>
-        <p class="attrib">- Richard Bombard, PSC</p>
-        <img src="assets/img/logo_psc.png" alt="PSC">
+      <div class="item">
+        <a href="http://www.ewji.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-ewji.png" alt="European Water Jetting Institute"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.sir-safe.nl/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-sir.png" alt="SIR"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.nassco.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-nassco.png" alt="NASSCO"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.esopassociation.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-esop.png" alt="The ESOP Association"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.nceo.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-NCEO.png" alt="NCEO"></a>
+      </div>
+      <div class="item">
+        <a href="http://esca.us/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-esca.png" alt="ESCA"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wtcdenver.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-WTCD.png" alt="World Trade Center Denver"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.shrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-SHRM.png" alt="SHRM"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.dahrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-dahrm.png" alt="DAHRM"></a>
       </div>
     </div>
   </div>
-
-  <!-- Controls 
-  <a class="left carousel-control" href="#homeSlides" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#homeSlides" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>-->
+</section>
 </div>
-<!-- End Testimonials -->
+<!-- End Affiliations -->
 
 {% include footer-cta.html %}
