--- a/loc-durango.html
+++ b/loc-durango.html
@@ -98,6 +98,16 @@ contact-durango: yes
             <a href="mailto:rawlin.brown@stoneagetools.com">rawlin.brown@stoneagetools.com</a></p>
           </div>
         </div>
+        
+        <h3 class="section-heading">Outside Sales</h3>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Anne Brennan</strong><br/>
+              West Coast Regional Sales Manager<br/>
+              Main: +1 (970) 426-4243<br/>
+            <a href="mailto:anne.brennan@stoneagetools.com">anne.brennan@stoneagetools.com</a></p>
+          </div>
+        </div>
 
       </div>
     </section>
