--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -256,7 +256,9 @@ permalink: /product-catalogs
         <h3>2017/18 Sewer Nozzles</h3>
         <p><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_001.pdf" target="_blank" title="2017 StoneAge Warthog Sewer Tools Catalog">Click here to download the complete 2017/18 Sewer Nozzles Catalog</a> » PDF 3.5 MB</p>
         <p>
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" style="width:32px;" /></a>
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" style="width:32px;" /></a> &nbsp;
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" style="width:32px;" /></a> &nbsp;
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" style="width:32px;" /></a>
         </p>
       </div>
     </div>
