--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -116,31 +116,67 @@ master-slider: yes
           
           <!-- Super specs -->
           <section id="section-bar-2">
-            <div class="col-sm-6">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">WG-085</td>
-                </tr>
-                <tr>
-                  <th>Diameter</th>
-                  <td>6.85 in.</td>
-                  <td><span class="metric">174 mm</span>
-                </tr>
-                <tr>
-                  <th>Min. Pipe Size</th>
-                  <td>7 in.</td>
-                  <td><span class="metric">178 mm</span>
-                </tr>
-                <tr>
-                  <th>Inlet Size</th>
-                  <td colspan="2">1 NPT</td>
-                </tr>
-              </tbody>
-              </table>
+            <div class="col-sm-5">
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#wg" aria-controls="wg" role="tab" data-toggle="tab">WG 085</a></li>
+                <li role="presentation"><a href="#wh" aria-controls="wh" role="tab" data-toggle="tab">WH 085</a></li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <!-- WG -->
+                <div role="tabpanel" class="tab-pane active" id="wg">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">WG 085</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>6.85 in.</td>
+                      <td><span class="metric">174 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Min. Pipe Size</th>
+                      <td>7 in.</td>
+                      <td><span class="metric">178 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Inlet Size</th>
+                      <td colspan="2">1 NPT</td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- WH -->
+                <div role="tabpanel" class="tab-pane" id="wh">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">WH 085</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>5.5 in.</td>
+                      <td><span class="metric">140 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Min. Pipe Size</th>
+                      <td>5.75 in.</td>
+                      <td><span class="metric">146 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Inlet Size</th>
+                      <td colspan="2">3/4 NPT</td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>                
+              </div>
             </div>
-            <aside class="col-sm-3 col-sm-offset-3 aside-box">
+            <aside class="col-sm-3 col-sm-offset-4 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
