--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -95,6 +95,11 @@ permalink: /patents
         <td>Adjustable 3-D rotary nozzle</td>
       </tr>
       <tr>
+        <td>9,662,689</td>
+        <td>LWP</td>
+        <td>Flexible multi-tube cleaning lance positioner guide apparatus</td>
+      </tr>
+      <tr>
         <td>8,505,845</td>
         <td>Scorpion</td>
         <td>System and method for storing, rotating, and feeding a high pressure hose</td>
