--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -164,8 +164,9 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>
-                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual_closed_guide_assembly.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Closed guide tube assembly</em></li>
+<!--                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>-->
+                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual_closed_guide_assembly.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> 
+<!--                  <em class="grey">- Closed guide tube assembly</em></li>-->
                 <li><a href="/assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
                 <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
                 <li><a href="/assets/pdf/manuals/ABX-2L_Belt_Installation.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Belt Replacement Addendum</a></li>
