--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -3,6 +3,7 @@ layout: default
 page-type: page
 title: StoneAge High Pressure Waterblast Tools Automated Equipment 
 permalink: /about
+master-slider: yes
 ---
 
 <div class="fluid-container landing-nav">
@@ -32,48 +33,52 @@ permalink: /about
   </aside>
 </section>
 
-<!-- Testimonials -->
-<div id="wordCarousel" class="carousel slide padding-tb-30" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#wordCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#wordCarousel" data-slide-to="1"></li>
-    <li data-target="#wordCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <div class="testimonial">
-        <p>"In 2015, NCTI allowed Evergreen Industrial Services to oversee our first fully automated hydro-blast turnaround.  Utilizing StoneAge automated equipment, Evergreen achieved the most proficient cleaning to date at an overall reduced cost and a much safer environment for hydro-blasting employees."</p>
-        <p class="attrib">- Brent Peveto, NCTI</p>
-        <img src="assets/img/logo_ncti.png" alt="NCTI Nippon Chemical Texas">
+<!-- Affiliations -->
+<div id="wordCarousel" class="padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
+  <div class="section-heading">
+      <h2>Our Affiliations</h2>
+  </div>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="http://www.hasc.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-hasc.png" alt="Houston Area Safety Council"></a>
       </div>
-    </div>
-    <div class="item">
-      <div class="testimonial">
-        <p>"The City of Los Angeles manages one of the largest wastewater collections systems in the country. They benchmarked the new Warthog Magnum against the competition and confirmed that it was the best cleaning tool available."</p>
-        <p class="attrib">- John Pujol, Advanced Infrastructure Technologies</p>
-        <img src="assets/img/logo_ait.png" alt="Advanced Infrastructure Technologies">
+      <div class="item">
+        <a href="http://www.waterjetting.org.uk/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-wja.png" alt="The Water Jetting Association"></a>
       </div>
-    </div>
-    <div class="item">
-      <div class="testimonial">
-        <p>"StoneAge helped us get our equipment fleet 100% automated."</p>
-        <p class="attrib">- Doug Mcgee, Evergreen Industrial Services</p>
-        <img src="assets/img/logo_evergreen.png" alt="Evergreen Industrial Services">
+      <div class="item">
+        <a href="https://www.wjta.org" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-wjta.png" alt="WJTA-IMCA"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.ewji.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-ewji.png" alt="European Water Jetting Institute"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.sir-safe.nl/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-sir.png" alt="SIR"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.nassco.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-nassco.png" alt="NASSCO"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.esopassociation.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-esop.png" alt="The ESOP Association"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.nceo.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-NCEO.png" alt="NCEO"></a>
+      </div>
+      <div class="item">
+        <a href="http://esca.us/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-esca.png" alt="ESCA"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.wtcdenver.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-WTCD.png" alt="World Trade Center Denver"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.shrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-SHRM.png" alt="SHRM"></a>
+      </div>
+      <div class="item">
+        <a href="http://www.dahrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-dahrm.png" alt="DAHRM"></a>
       </div>
     </div>
   </div>
-
-  <!-- Controls 
-  <a class="left carousel-control" href="#homeSlides" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#homeSlides" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>-->
+</section>
 </div>
-<!-- End Testimonials -->
+<!-- End Affiliations -->
