--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -40,6 +40,9 @@
 <div id="abx-2l-belt-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/mlXJTcdLGoA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="abx-3l-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/8wsyd6yWcxE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="abx-500-demo-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/RP77aZoHwNY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
