--- a/careers.html
+++ b/careers.html
@@ -48,6 +48,8 @@ permalink: /jobs
         <p>Click the job description link and use the "Apply for this job" button to submit your application.</p>
         <p>Please include a cover letter and resume specific to each position you’re applying for.</p>
         <p class="small"><em>Please note:</em><br>If you are not currently living in the region, your cover letter should include information about your interest in the Durango area. We send acknowledgement by email of all resumes we receive. If we do not contact you for an interview within one to two weeks, we have selected other candidates for the initial interview process. However, we keep all resumes on file until the position is filled, in case we decide to broaden our search. <em>Thank you.</em></p>
+        
+        <a href="http://www.esopassociation.org/" target=_blank><img src="assets/img/logo_ESOP.png" class="img-responsive" alt="ESOP Association"></a>
       </div>
     </div>
   </div>
