--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/abx-3l-03.jpg" alt="AutoBox ABX-3L exchanger cleaning system">
             <img class="ms-thumb" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/8wsyd6yWcxE"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger cleaning system">
@@ -88,8 +88,8 @@ master-slider: yes
         <ul>
             <li><a href="#section-bar-1"><span>Specifications</span></a></li>
             <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--
             <li><a href="#section-bar-3"><span>Videos</span></a></li>
+<!--
           <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
 -->
         </ul>
@@ -180,6 +180,22 @@ master-slider: yes
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
+      </section>
+      
+      <!-- Videos -->
+      <section id="section-bar-3">
+        <div class="row row-centered">
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-3l-vid">
+                <img src="/assets/vid/thumb/abx-3l-vid.png" alt="ABX-3L Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-3L Overview</p>
+          </div>
+        </div>
       </section>
 
     </div><!-- /content -->
