--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -156,10 +156,15 @@ master-slider: yes
         </div>
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
           <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>Hose feed tractor</li>
-              <li>Control box</li>
-            </ul>
+          <ul class="list-unstyled">
+            <li>Hose feed tractor</li>
+            <li>Control box</li>
+          </ul>
+          <ul class="list-unstyled">
+            <li><strong>Optional:</strong></li>
+            <li><a href="http://news.stoneagetools.com/bop-622-backout-preventer">Backout preventer with snout kit</a></li>
+            <li>Anchors</li>
+          </ul>
         </aside>
       </section>
 
