--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -168,6 +168,16 @@ master-slider: yes
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
             <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-3l-vid">
+                <img src="/assets/vid/thumb/abx-3l-vid.png" alt="ABX-3L Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-3L Overview</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
               <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-vid">
                 <img src="/assets/vid/thumb/abx-2l-vid.png" alt="ABX-2L Overview video" class="img-responsive" />
               </a>
