--- a/request-catalog.html
+++ b/request-catalog.html
@@ -34,7 +34,7 @@ permalink: /request-catalog
     <h2 class="section-heading">Product Catalogs</h2>
     <p>Check out the online versions while you wait for your copy to arrive!</p>
     <div class="row margin-bottom-30">
-      <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2016.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2017-18.jpg" class="img-responsive" alt="2017-18 StoneAge Waterblast Tools Catalog">
       </a>
     </div>
     <div class="row margin-bottom-30">
